Refactor deployment steps in deplow.yml
Updated deployment workflow for clarity and structure.

--- a/.github/workflows/deplow.yml
+++ b/.github/workflows/deplow.yml
@@ -10,28 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout the repository
+      # 1️⃣ Checkout the code
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2️⃣ Setup PHP (optional, only if you have composer)
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 8.2
-
-      # 3️⃣ Install Composer dependencies but skip tests/scripts
-      - name: Install Composer dependencies
-        run: composer install --no-dev --no-scripts --no-progress --no-suggest --prefer-dist --optimize-autoloader
-
-      # 4️⃣ Deploy via SSH
-      - name: Deploy via SSH
+      # 2️⃣ Deploy via SSH using rsync
+      - name: Deploy to server
         uses: appleboy/ssh-action@v0.1.9
         with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_KEY }}
+          host: ${{ secrets.DEPLOY_HOST }}      # your server IP or domain
+          username: ${{ secrets.DEPLOY_USER }}  # SSH user
+          key: ${{ secrets.DEPLOY_KEY }}        # private key from GitHub Secrets
           port: 22
-          source: "./"
-          target: "/var/www/html/your-project"
-          rsync_opts: "-avz --delete"
+          script: |
+            mkdir -p /var/www/html/portfolio
+            rsync -avz --delete ./ /var/www/html/portfolio/
